--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <title>Sneakers</title>
   </head>
   <body>
-    <div id="root" class="w-full h-full font-kumbh relative"></div>
+    <div
+      id="root"
+      class="w-full h-full font-kumbh relative max-w-[1124px] m-auto"
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
