feat: Enhance product display with slideshow functionality and UI improvements

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div
       id="root"
-      class="w-full h-full font-kumbh relative max-w-[1124px] m-auto"
+      class="w-full h-full font-kumbh relative md:px-[5%] xl:px-[11%] m-auto"
     ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
